--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "SHEWON-MD-BOT",
+  "name": "QUEEN THARU-MD-BOT",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/CyberKing4/SHEWON-MD-BOT",
   "logo": "https://telegra.ph/file/640ec55270602dfad216b.jpg",
